// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders base component using dayKeys 1`] = `
<div
  className="PlannerApp large"
>
  <ShowOnFocusButton
    buttonProps={
      Object {
        "onClick": undefined,
      }
    }
    buttonRef={[Function]}
  >
    Load prior dates
  </ShowOnFocusButton>
  <LoadingPastIndicator
    allPastItemsLoaded={false}
    loadingPast={false}
  />
  <Animatable(Day)
    animatableIndex={0}
    day="2017-04-24"
    itemsForDay={
      Array [
        Object {
          "dateBucketMoment": "2017-04-23T15:00:00.000Z",
        },
      ]
    }
    timeZone="UTC"
  />
  <Animatable(Day)
    animatableIndex={1}
    day="2017-04-25"
    itemsForDay={
      Array [
        Object {
          "dateBucketMoment": "2017-04-24T15:00:00.000Z",
        },
      ]
    }
    timeZone="UTC"
  />
  <Animatable(Day)
    animatableIndex={2}
    day="2017-04-26"
    itemsForDay={
      Array [
        Object {
          "dateBucketMoment": "2017-04-25T15:00:00.000Z",
        },
      ]
    }
    timeZone="UTC"
  />
  <div
    id="planner-app-fixed-element"
  />
  <LoadingFutureIndicator
    allFutureItemsLoaded={false}
    loadingFuture={false}
    onLoadMore={[Function]}
    plannerActive={[Function]}
  />
</div>
`;

exports[`renders empty component with no assignments 1`] = `
<div
  className="PlannerApp large"
>
  <ShowOnFocusButton
    buttonProps={
      Object {
        "onClick": undefined,
      }
    }
    buttonRef={[Function]}
  >
    Load prior dates
  </ShowOnFocusButton>
  <PlannerEmptyState
    changeToDashboardCardView={[Function]}
  />
</div>
`;

exports[`renders loading past spinner when loading past and there are no future items 1`] = `
<div
  className="PlannerApp large"
>
  <StickyButton
    buttonRef={[Function]}
    direction="up"
    hidden={true}
    offset="0px"
    onClick={[Function]}
  >
    New Activity
  </StickyButton>
  <ShowOnFocusButton
    buttonProps={
      Object {
        "onClick": undefined,
      }
    }
    buttonRef={[Function]}
  >
    Load prior dates
  </ShowOnFocusButton>
  <LoadingPastIndicator
    allPastItemsLoaded={false}
    loadingPast={true}
  />
  <div
    id="planner-app-fixed-element"
  />
</div>
`;

exports[`shows new activity button when new activity is indicated 1`] = `
<div
  className="PlannerApp large"
>
  <StickyButton
    buttonRef={[Function]}
    direction="up"
    hidden={true}
    offset="0px"
    onClick={[Function]}
  >
    New Activity
  </StickyButton>
  <ShowOnFocusButton
    buttonProps={
      Object {
        "onClick": undefined,
      }
    }
    buttonRef={[Function]}
  >
    Load prior dates
  </ShowOnFocusButton>
  <LoadingPastIndicator
    allPastItemsLoaded={false}
    loadingPast={false}
  />
  <Animatable(Day)
    animatableIndex={0}
    day="2017-04-24"
    itemsForDay={
      Array [
        Object {
          "dateBucketMoment": "2017-04-23T15:00:00.000Z",
        },
      ]
    }
    timeZone="UTC"
  />
  <Animatable(Day)
    animatableIndex={1}
    day="2017-04-25"
    itemsForDay={
      Array [
        Object {
          "dateBucketMoment": "2017-04-24T15:00:00.000Z",
        },
      ]
    }
    timeZone="UTC"
  />
  <Animatable(Day)
    animatableIndex={2}
    day="2017-04-26"
    itemsForDay={
      Array [
        Object {
          "dateBucketMoment": "2017-04-25T15:00:00.000Z",
        },
      ]
    }
    timeZone="UTC"
  />
  <div
    id="planner-app-fixed-element"
  />
  <LoadingFutureIndicator
    allFutureItemsLoaded={false}
    loadingFuture={false}
    onLoadMore={[Function]}
    plannerActive={[Function]}
  />
</div>
`;

exports[`shows only the loading component when the isLoading prop is true 1`] = `
<div
  className="PlannerApp large"
>
  <ShowOnFocusButton
    buttonProps={
      Object {
        "onClick": undefined,
      }
    }
    buttonRef={[Function]}
  >
    Load prior dates
  </ShowOnFocusButton>
  <LoadingPastIndicator
    allPastItemsLoaded={false}
    loadingPast={false}
  />
  <Container
    display="block"
    padding="xx-large medium"
    textAlign="center"
  >
    <Spinner
      size="medium"
      title="Loading planner items"
      variant="default"
    />
  </Container>
  <div
    id="planner-app-fixed-element"
  />
</div>
`;

exports[`shows the loading past indicator when loadingPast prop is true 1`] = `
<div
  className="PlannerApp large"
>
  <ShowOnFocusButton
    buttonProps={
      Object {
        "onClick": undefined,
      }
    }
    buttonRef={[Function]}
  >
    Load prior dates
  </ShowOnFocusButton>
  <LoadingPastIndicator
    allPastItemsLoaded={false}
    loadingPast={true}
  />
  <Animatable(Day)
    animatableIndex={0}
    day="2017-04-24"
    itemsForDay={
      Array [
        Object {
          "dateBucketMoment": "2017-04-23T15:00:00.000Z",
        },
      ]
    }
    timeZone="UTC"
  />
  <Animatable(Day)
    animatableIndex={1}
    day="2017-04-25"
    itemsForDay={
      Array [
        Object {
          "dateBucketMoment": "2017-04-24T15:00:00.000Z",
        },
      ]
    }
    timeZone="UTC"
  />
  <Animatable(Day)
    animatableIndex={2}
    day="2017-04-26"
    itemsForDay={
      Array [
        Object {
          "dateBucketMoment": "2017-04-25T15:00:00.000Z",
        },
      ]
    }
    timeZone="UTC"
  />
  <div
    id="planner-app-fixed-element"
  />
</div>
`;
